--- a/hrc.html
+++ b/hrc.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<link href="css/zoom.css" rel="stylesheet">
 	</head>
 	<body>
 		<!-- Wrapper -->
@@ -24,7 +25,7 @@
 
 							<!-- Logo
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">HRC</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" data-action="zoom"/></span><span class="title">HRC</span>
 								</a>
 							-->
 							<!-- Nav -->
@@ -55,7 +56,7 @@
 						<div class="inner">
 							<h1>Harry Ransom Center</h1>
 							<h2>Interactive Museum Experience</h2>
-							<span class="image main"><img src="images/IMG_20170917_144220.vr.jpg" alt="" /></span>
+							<span class="image main"><img src="images/IMG_20170917_144220.vr.jpg" alt="" data-action="zoom"/></span>
 									<h2>Project Overview</h2>
 									<b>Methods Used: </b>Contextual Interviews, Usability Testing, Rapid Prototyping
 									<br /><b>Tools Used: </b>Sketch, Invision
@@ -72,7 +73,7 @@
 									<br />
 									<br />
 									<span class="image fit">
-										<img src="images/SoA Horizontal User Flow2.png" alt="">
+										<img src="images/SoA Horizontal User Flow2.png" alt="" data-action="zoom">
 									</span>
 									<i>Graphic design by Serena Mistry, layout edited by Dixie Hamilton</i>
 									<br />
@@ -99,7 +100,7 @@
 								<section class="tiles">
 									<article class="">
 									<span class="image">
-										<img src="images/dh-20170917_007.jpg" alt="" />
+										<img src="images/dh-20170917_007.jpg" alt="" data-action="zoom"/>
 									</span>	
 									<h2></h2>
 									<div class="content">
@@ -108,7 +109,7 @@
 									</article>
 									<article class="">
 									<span class="image">
-										<img src="images/20170920_113313.jpg" alt="" />
+										<img src="images/20170920_113313.jpg" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -117,7 +118,7 @@
 									</article>
 									<article class="">
 									<span class="image">
-										<img src="images/20171021_152436.jpg" alt="" />
+										<img src="images/20171021_152436.jpg" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -136,7 +137,7 @@
 								<section class="tiles">
 									<article class="">
 									<span class="image">
-										<img src="images/soa_user-workflow.001.png" alt="" />
+										<img src="images/soa_user-workflow.001.png" alt="" data-action="zoom"/>
 									</span>	
 									<h2></h2>
 									<div class="content">
@@ -145,7 +146,7 @@
 									</article>
 									<article class="">
 									<span class="image">
-										<img src="images/Book AR.png" alt="" />
+										<img src="images/Book AR.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -154,7 +155,7 @@
 									</article>
 									<article class="">
 									<span class="image">
-										<img src="images/Collection Website.png" alt="" />
+										<img src="images/Collection Website.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -177,7 +178,7 @@
 								<section class="tiles">
 									<article class="">
 									<span class="image">
-										<img src="images/20171009_175353.jpg" alt="" />
+										<img src="images/20171009_175353.jpg" alt="" data-action="zoom"/>
 									</span>	
 									<h2></h2>
 									<div class="content">
@@ -186,7 +187,7 @@
 									</article>
 									<article class="">
 									<span class="image">
-										<img src="images/20171009_175803.jpg" alt="" />
+										<img src="images/20171009_175803.jpg" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -195,7 +196,7 @@
 									</article>
 									<article class="">
 									<span class="image">
-										<img src="images/20171009_175630.jpg" alt="" />
+										<img src="images/20171009_175630.jpg" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -241,6 +242,8 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			<script src="js/zoom.js"></script>
+			<script src="js/transition.js"></script>
 
 	</body>
 </html>
