--- a/hrc.html
+++ b/hrc.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<link href="css/zoom.css" rel="stylesheet">
+		<link href="assets/css/zoom.css" rel="stylesheet">
 	</head>
 	<body>
 		<!-- Wrapper -->
@@ -242,8 +242,8 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-			<script src="js/zoom.js"></script>
-			<script src="js/transition.js"></script>
+			<script src="assets/js/zoom.js"></script>
+			<script src="assets/js/transition.js"></script>
 
 	</body>
 </html>
