--- a/hrc.html
+++ b/hrc.html
@@ -99,7 +99,7 @@
 									</ul>
 								<section class="tiles">
 									<article class="">
-									<span class="image">
+									<span class="photo">
 										<img src="images/dh-20170917_007.jpg" alt="" data-action="zoom"/>
 									</span>	
 									<h2></h2>
@@ -108,7 +108,7 @@
 									</div>
 									</article>
 									<article class="">
-									<span class="image">
+									<span class="photo">
 										<img src="images/20170920_113313.jpg" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
@@ -117,7 +117,7 @@
 										</div>
 									</article>
 									<article class="">
-									<span class="image">
+									<span class="photo">
 										<img src="images/20171021_152436.jpg" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
@@ -136,7 +136,7 @@
 										</ul>
 								<section class="tiles">
 									<article class="">
-									<span class="image">
+									<span class="photo">
 										<img src="images/soa_user-workflow.001.png" alt="" data-action="zoom"/>
 									</span>	
 									<h2></h2>
@@ -145,7 +145,7 @@
 									</div>
 									</article>
 									<article class="">
-									<span class="image">
+									<span class="photo">
 										<img src="images/Book AR.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
@@ -154,7 +154,7 @@
 										</div>
 									</article>
 									<article class="">
-									<span class="image">
+									<span class="photo">
 										<img src="images/Collection Website.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
@@ -177,7 +177,7 @@
 									<br />
 								<section class="tiles">
 									<article class="">
-									<span class="image">
+									<span class="photo">
 										<img src="images/20171009_175353.jpg" alt="" data-action="zoom"/>
 									</span>	
 									<h2></h2>
@@ -186,7 +186,7 @@
 									</div>
 									</article>
 									<article class="">
-									<span class="image">
+									<span class="photo">
 										<img src="images/20171009_175803.jpg" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
@@ -195,7 +195,7 @@
 										</div>
 									</article>
 									<article class="">
-									<span class="image">
+									<span class="photo">
 										<img src="images/20171009_175630.jpg" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
