--- a/hrc.html
+++ b/hrc.html
@@ -44,7 +44,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="hrc.html">Harry Ransom Center</a></li>
-							<li><a href="healthcode.html">HealthCode</a></li>
+							<li><a href="pARk.html">pARk</a></li>
 							<li><a href="charterschool.html">Charter School</a></li>
 					<!--		<li><a href="elements.html">Elements</a></li>
 					-->
@@ -58,7 +58,7 @@
 							<h2>Interactive Museum Experience</h2>
 							<span class="image main"><img src="images/IMG_20170917_144220.vr.jpg" alt="" data-action="zoom"/></span>
 									<h2>Project Overview</h2>
-									<b>Methods Used: </b>Contextual Interviews, Usability Testing, Rapid Prototyping
+									<b>Methods Used: </b>Contextual Interviews, Usability Testing, Prototyping
 									<br /><b>Tools Used: </b>Sketch, Invision
 									<br /><b>Group Members: </b>Bria Fowler, Serena Mistry, Tim Salau
 									<br /><b>Project Duration: </b>Sep. 2017 - Present (In Progress)
@@ -69,7 +69,7 @@
 									<br />
 									<br />
 									<h2>Our Solution</h2>
-									We developed a multi-faceted solution that provides engaging elements for visitors while not detracting from the museum experience. Providing each visitor with an RFID wristband allows them to "tag" objects to learn more about them later and to experience personalized augmented reality and interactive experiences. Using a wristband instead of a smartphone app or similar solution allows visitors to remain immersed in the exhibit.
+									We developed a multi-faceted solution that provides engaging elements for visitors while ensuring they remain immersed in the museum experience. Providing each visitor with an RFID wristband allows them to "bookmark" objects to learn more about them later and to experience personalized augmented reality and interactive experiences. Using a wristband instead of a smartphone app, or similar solution, allows visitors to remain immersed in the exhibit.
 									<br />
 									<br />
 									<span class="image fit">
@@ -84,16 +84,16 @@
 									Our class was provided with existing research, including archetypes and personas. Our group chose to focus on the "Weekender" archetype: a person who is familiar with the topic of the exhibit and who likes to explore and learn about each object.
 									<br />
 									<br />
-									We visited the HRC to better understand the space and the Weekender archetype. We observed visitors and performed intercept interviews with five people who appeared to fit the Weekender description. Outside of the HRC, we also spoke with several museum-go-ers who shared insights on interactive exhibits they had experienced. From our interviews we took away several important insights:
+									We visited the HRC to better understand the space and the Weekender archetype. We observed visitors and performed intercept interviews with five people who appeared to fit the Weekender description. Outside of the HRC, we also spoke with several avid museum-goers who shared insights on interactive exhibits they had experienced. From our interviews we took away several important insights:
 									<ul>
 										<li>One woman did not want to use her phone for enhanced museum experiences so she would not be distracted by texts, emails, etc.</li>
 										<li>Another person had ignored phone-based interactive elements at museums in the past because she wanted to remain immersed in the exhibit.</li>
 										<li>One person shared that she appreciates museums with online exhibitions so after a museum visit she can share her favorite objects with friends and family instead of taking pictures</li>
 									</ul>
-									From these insights we created a journey map for the Weekender and focused on several pain points:
+									From these insights we created a journey map for the Weekender and focused on several potential pain points:
 									<ul>
 										<li>Wants more information to learn more about the objects</li>
-										<li>Exhibit items are not interactive and engaging</li>
+										<li>Exhibit items are not interactive and engaging enough</li>
 										<li>Forgets what was learned after leaving</li>
 										<li>Unable to share experience with friends/family not in attendance</li>
 									</ul>
@@ -167,13 +167,13 @@
 										<ul>
 											<li>The wristband is accessible for everyone in that visitors are not required to have a smartphone and the ability to download an app.</li>
 											<li>The tagging of objects via the wristband would provide data to the HRC to help them understand which objects people liked the most.</li>
-											<li>The HRC could provide additional information about the exhibit and objects after someone's visit, including related items that were not able to be obtained for the exhibit, and notifying visitors that books they enjoyed are available for in-person reading at the HRC.</li>
+											<li>The HRC could provide additional information about the exhibit and objects after someone's visit, including related items that were not able to be obtained for the exhibit, and notifying visitors that books they enjoyed are available for in-person reading at the HRC, or suggesting future exhibits to attend.</li>
 											<li>The ability to tag objects could lessen the amount of visitors taking photographs of objects, which is not allowed.</li>
 										</ul>
 									<b>User Testing</b>
 									<br />
-									After receiving positive feedback on our concept, we prototyped the experience to obtain more detailed feedback. Given the short timeframe for this project, we used a convenience sample of fellow students in the School of Information for our testing. We created low fidelity versions of the wristband and iPad app for explaining the wristband and providing augmented reality experiences and interactive quizzes. 
-									While we had created the iPad prototypes to be used with Invision on an iPad, last-minute technical difficulties resulted in us using a laptop for testing the welcome screen and a paper-based prototype for testing the augmented reality and quiz app. We set up a couple of mock exhibit items in an empty hallway and walked participants through the "museum experience".
+									After receiving positive feedback on our concept, we prototyped the experience to obtain more detailed feedback. Given the short timeframe for this project, we used a convenience sample of fellow students in the School of Information for our testing. We created low fidelity versions of the wristband and the iPad app that explains the wristband concept and provides augmented reality experiences and interactive quizzes. 
+									While we had created the iPad prototypes to be used with Invision on an iPad, last-minute technical difficulties resulted in us using a laptop for testing the welcome screen and a paper-based prototype for testing the augmented reality and quiz screens. We set up a couple of mock exhibit items in an empty hallway and walked participants through the "museum experience".
 									<br />
 								<section class="tiles">
 									<article class="">
@@ -205,12 +205,12 @@
 									</article>
 								</section>
 									<br />
-									Even our low fidelity museum experience resulted in participants providing valuable insights. While all four participants understood and liked the concept of tagging items to learn more about them later, other potential issues were uncovered:
+									Even our low fidelity museum experience resulted in participants providing valuable insights. While all four participants understood and liked the concept of bookmarking items to learn more about them later, other potential issues were uncovered:
 									<ul>
 										<li>The word "Pin" as a descriptor for tagging favorite objects was confusing to some participants.</li>
-										<li>The button/device for tagging objects needs to be placed at a height that is accessible for most people, including visitors in wheelchairs.</li>
-										<li>The button/device for tagging objects needs to provide visitors with "feedback" to show that the item has been successfully tagged.</li>
-										<li>A "Leaderboard" that showed visitors with the highest quiz scores was unneeded, or a "nice-to-have".</li>
+										<li>The button/device for bookmarking objects needs to be placed at a height that is accessible for most people, including visitors in wheelchairs.</li>
+										<li>The button/device for tagging objects needs to provide visitors with "feedback" to show that the item has been successfully bookmarked.</li>
+										<li>A "Leaderboard" that showed visitors with the highest quiz scores was not needed.</li>
 									</ul>
 									<br />
 								<h2>Next Steps</h2>
