--- a/hrc.html
+++ b/hrc.html
@@ -130,7 +130,7 @@
 									<p>With our journey map and pain points for the Weekender in mind, we were inspired by Disney's Magic Band to use a wristband as the means for visitor interaction. A RFID-enabled wristband could enable a visitor to interact with the exhibit while not being distracted by a smartphone or other device. Additionally, the HRC could provide iPads at selected objects so users can engage with augmented reality experiences and fun, interactive quizzes based on the exhibit topic. Our solution incorporates both the wristband and an app for the iPads.</p>
 									<br />Our solution focused on key interactions provided by the wristband that would address the Weekender's pain points:
 										<ul>
-											<li>Ability to tag exhibit items to obtain more detailed information about them later.</li>
+											<li>Ability to bookmark exhibit items to obtain more detailed information about them later.</li>
 											<li>Ability to share information about your favorite items with friends and family without having to take pictures.</li>
 											<li>Interaction with augmented reality and interactive quizzes via iPads provides a more engaging experience than the exhibit objects alone (of which most are printed materials).</li>
 										</ul>
@@ -166,9 +166,9 @@
 									We presented our concept to students at the School of Architecture who are working on a related project to design the actual exhibit. We received very positive feedback, and they especially liked a few aspects of our concept:
 										<ul>
 											<li>The wristband is accessible for everyone in that visitors are not required to have a smartphone and the ability to download an app.</li>
-											<li>The tagging of objects via the wristband would provide data to the HRC to help them understand which objects people liked the most.</li>
+											<li>The bookmarking of objects via the wristband would provide data to the HRC to help them understand which objects people liked the most.</li>
 											<li>The HRC could provide additional information about the exhibit and objects after someone's visit, including related items that were not able to be obtained for the exhibit, and notifying visitors that books they enjoyed are available for in-person reading at the HRC, or suggesting future exhibits to attend.</li>
-											<li>The ability to tag objects could lessen the amount of visitors taking photographs of objects, which is not allowed.</li>
+											<li>The ability to bookmark objects could lessen the amount of visitors taking photographs of objects, which is not allowed.</li>
 										</ul>
 									<b>User Testing</b>
 									<br />
@@ -191,7 +191,7 @@
 									</span>
 										<h2></h2>
 										<div class="content">
-											<p>Mockup of a Painting and Button for Tagging (formerly called "pinning")</p>
+											<p>Mockup of a Painting and Button for Bookmarking (formerly called "pinning")</p>
 										</div>
 									</article>
 									<article class="">
@@ -207,9 +207,9 @@
 									<br />
 									Even our low fidelity museum experience resulted in participants providing valuable insights. While all four participants understood and liked the concept of bookmarking items to learn more about them later, other potential issues were uncovered:
 									<ul>
-										<li>The word "Pin" as a descriptor for tagging favorite objects was confusing to some participants.</li>
+										<li>The word "Pin" as a descriptor for bookmarking favorite objects was confusing to some participants.</li>
 										<li>The button/device for bookmarking objects needs to be placed at a height that is accessible for most people, including visitors in wheelchairs.</li>
-										<li>The button/device for tagging objects needs to provide visitors with "feedback" to show that the item has been successfully bookmarked.</li>
+										<li>The button/device for bookmarking objects needs to provide visitors with "feedback" to show that the item has been successfully bookmarked.</li>
 										<li>A "Leaderboard" that showed visitors with the highest quiz scores was not needed.</li>
 									</ul>
 									<br />
