--- a/park.html
+++ b/park.html
@@ -64,7 +64,7 @@
 									<br />
 									<br />
 									<h2>Our Task</h2>
-									For our Interaction Design class at the School of Information, we were tasked with identifying an interaction design-focused project to prototype. Because we are interested in submitting a project for the next CHI conference, we chose to focus on a project that would fit within the CHI Student Design Competition guidelines of "engaging communities", which is a very broad topic.
+									For our Interaction Design class at the School of Information, we were tasked with identifying an interaction design-focused project to prototype. Because we are interested in submitting a project for the next CHI conference, we chose to focus on a project that would fit within the CHI Student Design Competition guidelines of "engaging communities".
 									<br />
 									<br />
 									<h2>Our Solution</h2>
@@ -76,13 +76,13 @@
 									</span>
 									<i>Concept video created by Eric Graham</i>
 									<br />
-									While our concept video used the classic Pacman game since it was easy to incorporate, our actual app will include more collaborative games and activities that will allow people to create things together in order to create a sense of mutual goals and community.
+									While our concept video used the classic Pacman game since it was quick to incorporate, our actual app will include more collaborative games and activities that will allow people to create things together in order to create a sense of mutual goals and community.
 									<br />
 									<br />
 									<h2>Our Process</h2>
 									<b>Ideation</b>
 									<br />
-									To begin the ideation process, we wrote down words that came to us when thinking about "community". We then used them as a starting point for two rounds of Crazy 8's sketching to generate concepts. We placed the second round of sketches on the white board and voted on our favorite concepts. After voting, we had a consensus on creating an app for multi-player augmented reality games in public spaces. 
+									To begin the ideation process, we wrote down words that came to us when thinking about "community". We then used them as a starting point for two rounds of "Crazy 8's" sketching to generate concepts. We placed the second round of sketches on the white board and voted on our favorite concepts. After voting, we had a consensus on creating an app for multi-player augmented reality games in public spaces. 
 									<br />
 									<section class="tiles">
 										<article class="">
@@ -119,11 +119,11 @@
 										<li>It brings people together in a concentrated area so they can form in-person connections as well as virtual connections.</li>
 										<li>Being outside contributes to mental and physical health and parks create a feeling of community.</li>
 										<li>Almost 70% of people in the country's 100 biggest cities live within a 10 minute walk of a park; we hope to increase utilization of these existing spaces.</li>
-										<li>While previous AR apps like Pokemon Go were popular, our app will remove some of the problematic elements (crowds gathering outside of peoples' houses, players not paying attention while crossing streets, etc.</li>
+										<li>While previous AR apps like Pokemon Go were popular, our app will remove some of its problematic elements (crowds gathering outside of private residences, players not paying attention while crossing streets, etc.</li>
 									</ul>
 									<br />
 									<h2>Next Steps</h2>
-									Over the next two months we will be designing a questionnaire and analyzing the results, performing interviews, creating a journey map, iterating on prototypes, and developing a basic working app.
+									Over the next two months we will be designing a questionnaire and analyzing the results, performing interviews, creating a journey map, prototyping, testing and iterating.
 									<br />
 									<b>Project Timeline<p>
 									<span class="image fit">
