--- a/hrc.html
+++ b/hrc.html
@@ -72,7 +72,7 @@
 									We developed a multi-faceted solution that provides engaging elements for visitors while ensuring they remain immersed in the museum experience. Providing each visitor with an RFID wristband allows them to "bookmark" objects to learn more about them later and to experience personalized augmented reality and interactive experiences. Using a wristband instead of a smartphone app, or similar solution, allows visitors to remain immersed in the exhibit.
 									<br />
 									<br />
-									<span class="image fit">
+									<span class="image main">
 										<img src="images/SoA Horizontal User Flow2.png" alt="" data-action="zoom">
 									</span>
 									<i>Graphic design by Serena Mistry, layout edited by Dixie Hamilton</i>
