--- a/park.html
+++ b/park.html
@@ -71,7 +71,7 @@
 									We are focusing on developing an augmented reality smartphone app to bring people together in public parks to collaborate on interactive games and tasks. Through creativity and play, we hope to bring diverse groups together to give people a sense of community while reaping the benefits of outdoor activity.
 									<br />
 									<br />
-									<span class="image main">
+									<span class="image fit">
 									<iframe width="560" height="315" src="https://www.youtube.com/embed/RA9_ZJ65VuE" frameborder="0" allowfullscreen></iframe>
 									</span>
 									<i>Concept video created by Eric Graham</i>
