--- a/park.html
+++ b/park.html
@@ -127,7 +127,7 @@
 									<br />
 									<b>Project Timeline<p>
 									<span class="image fit">
-										<img src="images/pARk Timeline.png" alt="" />
+										<img src="images/Park Schedule.png" alt="" />
 									</span>
 						</div>
 					</div>
