--- a/hrc.html
+++ b/hrc.html
@@ -45,7 +45,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="hrc.html">Harry Ransom Center</a></li>
 							<li><a href="pARk.html">pARk</a></li>
-							<li><a href="charterschool.html">Charter School</a></li>
+							<li><a href="charterschool.html">KIPP Austin Public Schools</a></li>
 					<!--		<li><a href="elements.html">Elements</a></li>
 					-->
 						</ul>
@@ -58,44 +58,105 @@
 							<h2>Interactive Museum Experience</h2>
 							<span class="image main"><img src="images/IMG_20170917_144220.vr.jpg" alt="" data-action="zoom"/></span>
 									<h2>Project Overview</h2>
-									<b>Methods Used: </b>Contextual Interviews, Usability Testing, Prototyping
+									<b>Role: </b>UX Researcher
+									<br /><b>Methods Used: </b>Contextual Interviews, Journey Mapping, Usability Testing, Wireframing, Prototyping
 									<br /><b>Tools Used: </b>Sketch, Invision
+									<br /><b>Platform: </b>RFID Wristband and Sensors, iPad Application, Website
 									<br /><b>Group Members: </b>Bria Fowler, Serena Mistry, Tim Salau
 									<br /><b>Project Duration: </b>Sep. 2017 - Present (In Progress)
 									<br />
 									<br />
+									<h2>The Problem</h2>
+									The Harry Ransom Center ("HRC") at The University of Texas at Austin has an upcoming exhibit covering the Arts and Crafts Movement of the late 1800's. Most of the featured objects are books and print materials (in glass cases) that do not provide a very engaging experience for visitors.
+									<br />
+									<br />
 									<h2>Our Task</h2>
-									This project is based on an upcoming exhibit for the Harry Ransom Center ("HRC") covering the Arts and Crafts Movement of the late 1800's and early 1900's. Many of the items are print materials that do not provide an interactive experience for visitors. Our Rapid Prototyping class was tasked with determining how technology could best be integrated to provide a more interactive and immersive experience.
+									Our Rapid Prototyping class at UT's School of Information was tasked with determining how technology could best be integrated to provide a more interactive and immersive experience.
 									<br />
 									<br />
 									<h2>Our Solution</h2>
-									We developed a multi-faceted solution that provides engaging elements for visitors while ensuring they remain immersed in the museum experience. Providing each visitor with an RFID wristband allows them to "bookmark" objects to learn more about them later and to experience personalized augmented reality and interactive experiences. Using a wristband instead of a smartphone app, or similar solution, allows visitors to remain immersed in the exhibit.
-									<br />
-									<br />
-									<span class="image main">
-										<img src="images/SoA Horizontal User Flow2.png" alt="" data-action="zoom">
-									</span>
-									<i>Graphic design by Serena Mistry, layout edited by Dixie Hamilton</i>
-									<br />
-									<br />
-									<h2>Our Process</h2>
-									<b>Initial Research: Site Visit and Interviews</b>
-									<br />
-									Our class was provided with existing research, including archetypes and personas. Our group chose to focus on the "Weekender" archetype: a person who is familiar with the topic of the exhibit and who likes to explore and learn about each object.
-									<br />
-									<br />
-									We visited the HRC to better understand the space and the Weekender archetype. We observed visitors and performed intercept interviews with five people who appeared to fit the Weekender description. Outside of the HRC, we also spoke with several avid museum-goers who shared insights on interactive exhibits they had experienced. From our interviews we took away several important insights:
-									<ul>
-										<li>One woman did not want to use her phone for enhanced museum experiences so she would not be distracted by texts, emails, etc.</li>
-										<li>Another person had ignored phone-based interactive elements at museums in the past because she wanted to remain immersed in the exhibit.</li>
-										<li>One person shared that she appreciates museums with online exhibitions so after a museum visit she can share her favorite objects with friends and family instead of taking pictures</li>
+									We developed a multi-faceted solution that provides interactive elements while ensuring visitors are not unnecessarily distracted by technology. 
+									<ul><li>Each visitor receives an RFID wristband that allows them to "bookmark" objects to learn more about them later.</li>
+										<li>An application on dedicated iPads provides augmented reality and interactive activities that can be personalized via the visitors' wristbands.</li>
+										<li>After leaving the HRC, visitors will receive an emailed link to a personalized website with more information about the items they "bookmarked".</li>
 									</ul>
-									From these insights we created a journey map for the Weekender and focused on several potential pain points:
+									<div class="value-img">
+										<img src="images/SoA Horizontal User Flow2.png" alt="" data-action="zoom" data-original="images/SoA Horizontal User Flow2.png"/>
+									<figcaption>HRC Visitor Flow. Graphic design by Serena Mistry.</figcaption>
+									</div>
+								<section class="tiles">
+									<article class="">
+									<span class="photo">
+										<img src="images/HRC Welcome.png" alt="" data-action="zoom"/>
+									</span>	
+									<h2></h2>
+									<div class="content">
+										<p>Prototype of iPad Welcome Screen</p>
+									</div>
+									</article>
+									<article class="">
+									<span class="photo">
+										<img src="images/HRC AR Vase.png" alt="" data-action="zoom"/>
+									</span>
+										<h2></h2>
+										<div class="content">
+											<p>Prototype of Augmented Reality App</p>
+										</div>
+									</article>
+									<article class="">
+									<span class="photo">
+										<img src="images/HRC Phone.png" alt="" data-action="zoom"/>
+									</span>
+										<h2></h2>
+										<div class="content">
+											<p>Personalized Website of Bookmarked Items</p>
+										</div>
+									</article>
+								</section>
+									<h2>Our Process</h2>
+									<b>Initial Research</b>
+									<p>Our class was provided with existing research, including archetypes and personas, on which to base our concepts. We chose to focus on the "Weekender" archetype: a person who is familiar with the topic of the exhibit and who likes to explore and learn about each object.</p>
+								<section class="tiles">
+									<article class="">
+									<span class="photo">
+										<img src="images/SoA Archetypes.png" alt="" data-action="zoom"/>
+									</span>	
+									<h2></h2>
+									<div class="content">
+										<p>The Weekender Archetype</p>
+									</div>
+									</article>
+									<article class="">
+									<span class="photo">
+										<img src="images/SoA Persona.png" alt="" data-action="zoom"/>
+									</span>
+										<h2></h2>
+										<div class="content">
+											<p>Will: Persona Provide by School of Architecture</p>
+										</div>
+									</article>
+									<article class="">
+									<span class="photo">
+										<img src="images/Objects.png" alt="" data-action="zoom"/>
+									</span>
+										<h2></h2>
+										<div class="content">
+											<p>Exhibit Objects: Mostly Print Materials</p>
+										</div>
+									</article>
+								</section>	
+									We visited the HRC to better understand the space and the Weekender archetype. We observed visitors and I performed intercept interviews with five people who appeared to fit the Weekender description. Separately from the HRC visit, I also spoke with several avid museum-goers who shared insights on interactive exhibits they had experienced. Several stories from these interviews informed our concept design:
 									<ul>
-										<li>Wants more information to learn more about the objects</li>
-										<li>Exhibit items are not interactive and engaging enough</li>
-										<li>Forgets what was learned after leaving</li>
-										<li>Unable to share experience with friends/family not in attendance</li>
+										<li>One woman did not want to use a phone-based solution because did not she would not be distracted by other notifications.</li>
+										<li>Another person had ignored phone-based interactive elements at museums in the past because she wanted to remain immersed in the exhibit.</li>
+										<li>One person shared that she enjoys sharing object she enjoyed at museums with friends.</li>
+									</ul>
+									From these insights we created a journey map for Bill, the Weekender, and focused on several potential pain points. Bill wants:
+									<ul>
+										<li>More information about objects to learn as much as possible</li>
+										<li>Exhibit items that are engaging, interactive, and inspiring.</li>
+										<li>To remember what he saw and learned after leaving the museum.</li>
+										<li>To be able to share experience with friends/family not in attendance</li>
 									</ul>
 								<section class="tiles">
 									<article class="">
@@ -104,12 +165,12 @@
 									</span>	
 									<h2></h2>
 									<div class="content">
-										<p>Site Visit</p>
+										<p>Site Visit to HRC</p>
 									</div>
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/20170920_113313.jpg" alt="" data-action="zoom"/>
+										<img src="images/20170920_113134.jpg" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -127,53 +188,51 @@
 									</article>
 								</section>	
 									<b>Ideation and Prototyping</b>
-									<p>With our journey map and pain points for the Weekender in mind, we were inspired by Disney's Magic Band to use a wristband as the means for visitor interaction. A RFID-enabled wristband could enable a visitor to interact with the exhibit while not being distracted by a smartphone or other device. Additionally, the HRC could provide iPads at selected objects so users can engage with augmented reality experiences and fun, interactive quizzes based on the exhibit topic. Our solution incorporates both the wristband and an app for the iPads.</p>
-									<br />Our solution focused on key interactions provided by the wristband that would address the Weekender's pain points:
+									<p>With our journey map and pain points for the Weekender in mind, we were inspired by Disney's Magic Band to use a wristband as the means for visitor interaction. A RFID-enabled wristband could enable a visitor to interact with the exhibit while not being distracted by a smartphone or other device. Additionally, the HRC could provide iPads at selected objects so users can engage with augmented reality experiences and fun, interactive quizzes based on the exhibit topic. 
+									<br />
+									Our solution incorporates the wristband, an app for the exhibit's iPads, and a website for visitors to retrieve their bookmarked items. I sketched the initial concept for the iPad app, and Serena Mistry mocked up initial wireframes for testing.</p>
+							<!--		Our solution focused on key interactions provided by the wristband that would address the Weekender's pain points:
 										<ul>
 											<li>Ability to bookmark exhibit items to obtain more detailed information about them later.</li>
 											<li>Ability to share information about your favorite items with friends and family without having to take pictures.</li>
 											<li>Interaction with augmented reality and interactive quizzes via iPads provides a more engaging experience than the exhibit objects alone (of which most are printed materials).</li>
 										</ul>
+							-->
 								<section class="tiles">
 									<article class="">
 									<span class="photo">
-										<img src="images/soa_user-workflow.001.png" alt="" data-action="zoom"/>
+										<img src="images/Welcome Sketch.jpg" alt="" data-action="zoom"/>
 									</span>	
 									<h2></h2>
 									<div class="content">
-										<p>Flow of Visitor Experience</p>
+										<p>My Initial Sketch of iPad Welcome Screens</p>
 									</div>
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/Book AR.png" alt="" data-action="zoom"/>
+										<img src="images/Welcome Screen 1.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
 										<div class="content">
-											<p>Augmented Reality for Flipping Book Pages</p>
+											<p>Welcome Screen Wireframe by Serena Mistry</p>
 										</div>
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/Collection Website.png" alt="" data-action="zoom"/>
+										<img src="images/Welcome Screen 2.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
 										<div class="content">
-											<p>Curated Collection Available After Visit</p>
+											<p>Welcome Screen Wireframe by Serena Mistry</p>
 										</div>
 									</article>
 								</section>	
-									We presented our concept to students at the School of Architecture who are working on a related project to design the actual exhibit. We received very positive feedback, and they especially liked a few aspects of our concept:
-										<ul>
-											<li>The wristband is accessible for everyone in that visitors are not required to have a smartphone and the ability to download an app.</li>
-											<li>The bookmarking of objects via the wristband would provide data to the HRC to help them understand which objects people liked the most.</li>
-											<li>The HRC could provide additional information about the exhibit and objects after someone's visit, including related items that were not able to be obtained for the exhibit, and notifying visitors that books they enjoyed are available for in-person reading at the HRC, or suggesting future exhibits to attend.</li>
-											<li>The ability to bookmark objects could lessen the amount of visitors taking photographs of objects, which is not allowed.</li>
-										</ul>
 									<b>User Testing</b>
 									<br />
-									After receiving positive feedback on our concept, we prototyped the experience to obtain more detailed feedback. Given the short timeframe for this project, we used a convenience sample of fellow students in the School of Information for our testing. We created low fidelity versions of the wristband and the iPad app that explains the wristband concept and provides augmented reality experiences and interactive quizzes. 
-									While we had created the iPad prototypes to be used with Invision on an iPad, last-minute technical difficulties resulted in us using a laptop for testing the welcome screen and a paper-based prototype for testing the augmented reality and quiz screens. We set up a couple of mock exhibit items in an empty hallway and walked participants through the "museum experience".
+									Given the short timeframe for this project, we only had a few days to initiate and complete one round of user testing on our low fidelity mockups. We used a convenience sample of four fellow students in the School of Information for our testing. While we had hoped to obtain between five and eight testers, we proceeded with four testers to we would have time to iterate on the feedback.
+									<br />
+									We set up a couple of mock exhibit items in an empty hallway and walked participants through our "museum experience".
+									<br />
 									<br />
 								<section class="tiles">
 									<article class="">
@@ -191,7 +250,7 @@
 									</span>
 										<h2></h2>
 										<div class="content">
-											<p>Mockup of a Painting and Button for Bookmarking (formerly called "pinning")</p>
+											<p>Mockup of a Painting and Button for Bookmarking</p>
 										</div>
 									</article>
 									<article class="">
@@ -204,17 +263,22 @@
 										</div>
 									</article>
 								</section>
-									<br />
 									Even our low fidelity museum experience resulted in participants providing valuable insights. While all four participants understood and liked the concept of bookmarking items to learn more about them later, other potential issues were uncovered:
 									<ul>
 										<li>The word "Pin" as a descriptor for bookmarking favorite objects was confusing to some participants.</li>
 										<li>The button/device for bookmarking objects needs to be placed at a height that is accessible for most people, including visitors in wheelchairs.</li>
 										<li>The button/device for bookmarking objects needs to provide visitors with "feedback" to show that the item has been successfully bookmarked.</li>
-										<li>A "Leaderboard" that showed visitors with the highest quiz scores was not needed.</li>
 									</ul>
-									<br />
+									<h2>Results</h2>
+									We presented our concept to students at the School of Architecture who are working on a related project to design the actual exhibit. We received very positive feedback, and they especially liked a few aspects of our concept:
+										<ul>
+											<li>The wristband is accessible for everyone in that visitors are not required to have a smartphone and the ability to download an app.</li>
+											<li>The bookmarking of objects via the wristband would provide the HRC with a wealth of data to help them understand the parts of the exhibit visitors enjoyed most.</li>
+											<li>The HRC could provide additional information about the exhibit and objects after someone's visit, including related items that were not able to be obtained for the exhibit and suggesting future exhibits to attend based on the items they bookmarked.</li>
+											<li>The ability to bookmark objects could lessen the amount of visitors taking photographs of objects (flash photography is not allowed.</li>
+										</ul>
 								<h2>Next Steps</h2>
-									We are currently incorporating the feedback from user testing and refining our iPad app prototype. Since our solution is not limited to a standalone iPad app, we will be filming a short video at the HRC to show how the wristband and iPad app form a cohesive and engaging user experience. The project will be completed by November 7th, 2017.
+									We are currently finalizing our iPad app prototype and completing a video to demonstrate the wristband experience. 
 						</div>
 					</div>
 
