--- a/park.html
+++ b/park.html
@@ -123,8 +123,8 @@
 									</ul>
 									<br />
 									<h2>Next Steps</h2>
-									Over the next two months we will be designing a questionnaire and analyzing the results, performing interviews, creating a journey map, prototyping, testing and iterating.
-									<br />
+									<p>Over the next two months we will be designing a questionnaire and analyzing the results, performing interviews, creating a journey map, prototyping, testing and iterating.
+									</p>
 									<b>Project Timeline<p>
 									<span class="image fit">
 										<img src="images/Park Schedule.png" alt="" />
