--- a/hrc.html
+++ b/hrc.html
@@ -44,7 +44,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="hrc.html">Harry Ransom Center</a></li>
-							<li><a href="pARk.html">pARk</a></li>
+							<li><a href="park.html">pARk</a></li>
 							<li><a href="charterschool.html">KIPP Austin Public Schools</a></li>
 					<!--		<li><a href="elements.html">Elements</a></li>
 					-->
