--- a/hrc.html
+++ b/hrc.html
@@ -80,10 +80,12 @@
 										<li>An application on dedicated iPads provides augmented reality and interactive activities that can be personalized via the visitors' wristbands.</li>
 										<li>After leaving the HRC, visitors will receive an emailed link to a personalized website with more information about the items they "bookmarked".</li>
 									</ul>
+									<b>Visitor Journey Incorporating Wristband Concept</b>
 									<div class="value-img">
 										<img src="images/SoA Horizontal User Flow2.png" alt="" data-action="zoom" data-original="images/SoA Horizontal User Flow2.png"/>
-									<figcaption>HRC Visitor Flow. Graphic design by Serena Mistry.</figcaption>
+									<!--<figcaption>HRC Visitor Flow. Graphic design by Serena Mistry.</figcaption>-->
 									</div>
+								<b>Final Prototypes of iPad and Website Experiences</b>
 								<section class="tiles">
 									<article class="">
 									<span class="photo">
