--- a/charterschool.html
+++ b/charterschool.html
@@ -67,7 +67,7 @@
 									<br />
 									<br />
 									<h2>My Task</h2>
-									As part of my current internship with KAPS, I initiated a research project to determine how we could improve our processes and templates to better align with the processes of budget managers. My goal is to understand how the budget managers use the tools provided to them by the financ team, and understand their own financial processes. 
+									As part of my current internship with KAPS, I initiated a research project to determine how we could improve our processes and templates to better align with the processes of budget managers. My goal is to understand how the budget managers use the tools provided to them by the finance team so the tools can be better designed to meet their needs.
 									<br />
 									<br />
 									<h2>My Process</h2>
